BDOG-BAU fix google charts flickering on hover

--- a/public/catalogue-frontend.css
+++ b/public/catalogue-frontend.css
@@ -377,3 +377,7 @@ table.table-striped-columns-custom > :not(caption) > tr > td:nth-child(even) {
         display: none;
     }
 }
+
+/* Fixes a Google Charts flickering-on-over issue outlined here:
+   https://github.com/google/google-visualization-issues/issues/2162 */
+svg > g:last-child > g.google-visualization-tooltip { pointer-events: none }
